<resources>
    <string name="app_name" translatable="false">Emercardi</string>
    <string name="action_settings">Settings</string>
    <string name="blood_type_A">A</string>
    <string name="blood_type_B">B</string>
    <string name="blood_type_AB">AB</string>
    <string name="blood_type_O">O</string>
    <string name="BloodTypeString">Blood Type</string>
    <string name="FullNameString">Full Name</string>
    <string name="AgeString">Age</string>
    <string name="HeightString">Height</string>
    <string name="WeightString">Weight</string>
    <string name="DateOfBirthString">Date of Birth</string>
    <string name="RhTrueString" translatable="false">Rh+</string>
    <string name="RhFalseString" translatable="false">Rh-</string>
    <string name="KellTrueString" translatable="false">Kell+</string>
    <string name="KellFalseString" translatable="false">Kell-</string>
    <string name="UnknownString" translatable="false">\?</string>
    <string name="DiseasesString">Diseases</string>
    <string name="AllergiesString">Allergies</string>
    <string name="MedicinesString">Medicines</string>
    <string name="mgString">mg</string>
    <string name="µgString">µg</string>
    <string name="mlString">ml</string>
    <string name="PartFullString">Full</string>
    <string name="PartHalfString" translatable="false">1/2</string>
    <string name="PartQuartString" translatable="false">1/4</string>
    <string name="PartEighthString" translatable="false">1/8</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string-array name="planets_array" translatable="false">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
</resources>
