<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="user" type="ru.shal1928.emercardi.app.models.UserModel"/>
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:orientation="vertical"
                  tools:context=".activities.MainActivity">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top|center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personNameString"
                    android:id="@+id/personFirstNameTextView"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top|center_horizontal"
                    android:inputType="textPersonName"
                    android:text="@{user.firstName}"
                    android:ems="10"
                    android:id="@+id/personFirstNameEditText" />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="25dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top|center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/personLastNameString"
                    android:id="@+id/personLastNameTextView"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top|center_horizontal"
                    android:inputType="textPersonName"
                    android:text="@{user.lastName}"
                    android:ems="10"
                    android:id="@+id/personLastNameEditText" />
        </LinearLayout>

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="top|center_horizontal"
                      android:layout_marginTop="35dp">
            <TextView
                    android:id="@+id/radioGroupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/BloodTypeString"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                <RadioButton android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/blood_type_O" />
                <RadioButton android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/blood_type_A" />
                <RadioButton android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/blood_type_B" />
                <RadioButton android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/blood_type_AB" />
            </RadioGroup>
        </LinearLayout>


    </LinearLayout>
</layout>
